Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10199

4.7.0-beta1 Symbian emulator: All gui applications crash on launch

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 4.6.3, 4.7.0
    • 4.7.0
    • None
    • None
    • Device: S60 5.0 Public SDK Emulator
      Firmware version: v1.0
      Release: Symbian binary installer: qt-symbian-opensource-4.7.0-beta1.exe
      Platform: winscw udeb
    • d3b5460674e1ab8e11f05961390a6e62364032a8

    Description

      All gui applications are crashing on startup on emulator when built against distributed winscw binaries. Non-gui apps like examples/qtestlib/tutorial1 seem to work.

      Crash stack from anomaly:
      ...
      11 0x71E7D35( ekern.exe )() 0x071e7d35
      10 QWidget::windowFlags() C:\Qt\4.7.0-beta1-4\src\gui\kernel\qwidget.h:922 0x0298ff74
      9 QWidget::setWindowState() C:\Qt\4.7.0-beta1-4\src\gui\kernel\qwidget_s60.cpp:1095 0x02c6517e
      8 QWidget::showFullScreen() C:\Qt\4.7.0-beta1-4\src\gui\kernel\qwidget.cpp:2901 0x02c2fa1b
      7 main() C:\Qt\4.7.0-beta1-4\demos\embedded\anomaly\src\Main.cpp:62 0x004010c5
      6 QtMainWrapper() C:\Qt\4.7.0-beta1-4\src\s60main\qts60main_mcrt0.cpp:86 0x0040b8a1
      5 E32Main() C:\Qt\4.7.0-beta1-4\src\s60main\qts60main.cpp:56 0x0040b6bc
      4 _E32Startup() L:\src\cedar\generic\base\e32\euser\epoc\win32\uc_exe.cpp:83 0x0040a908
      3 0x71E947F( ekern.exe )() 0x071e947f
      2 0x71E7987( ekern.exe )() 0x071e7987
      1 0x7C80B683( KERNEL32.dll )() 0x7c80b683

      Crash stack from analogclock:
      ...
      20 0x4447D35( ekern.exe )() 0x04447d35
      19 QSymbianControl::FocusChanged() C:\Qt\4.7.0-beta1-4\src\gui\kernel\qapplication_s60.cpp:989 0x0145adf3
      18 0x40606C76( cone.dll )() 0x40606c76
      17 0x406025D5( cone.dll )() 0x406025d5
      16 0x406023F2( cone.dll )() 0x406023f2
      15 0x4060286F( cone.dll )() 0x4060286f
      14 0x406027DB( cone.dll )() 0x406027db
      13 0x406022B0( cone.dll )() 0x406022b0
      12 QSymbianControl::setFocusSafely() C:\Qt\4.7.0-beta1-4\src\gui\kernel\qapplication_s60.cpp:1085 0x0145b3cc
      11 QWidgetPrivate::show_sys() C:\Qt\4.7.0-beta1-4\src\gui\kernel\qwidget_s60.cpp:497 0x01462d27
      10 QWidgetPrivate::show_helper() C:\Qt\4.7.0-beta1-4\src\gui\kernel\qwidget.cpp:7290 0x01439cef
      9 QWidget::setVisible() C:\Qt\4.7.0-beta1-4\src\gui\kernel\qwidget.cpp:7499 0x0143a25d
      8 QWidget::show() C:\Qt\4.7.0-beta1-4\src\gui\kernel\qwidget.h:485 0x0118fc10
      7 main() C:\Qt\4.7.0-beta1-4\examples\widgets\analogclock\main.cpp:51 0x00401767
      6 QtMainWrapper() C:\Qt\4.7.0-beta1-4\src\s60main\qts60main_mcrt0.cpp:86 0x00403751
      5 E32Main() C:\Qt\4.7.0-beta1-4\src\s60main\qts60main.cpp:56 0x0040355c
      4 _E32Startup() L:\src\cedar\generic\base\e32\euser\epoc\win32\uc_exe.cpp:83 0x00402768

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes